RUN_20250201234118/InputLogs.txt
---Input Logs----
Pass:
   + 1.c, 15.c, 14.c, 3.c, 10.c, 5.c, 9.c, 11.c, 13.c, 0.c
Fails:
   + 7.c ----> Reason: /home/baolong/Workspace/workspace/PROC/INPUT/7.c:3:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘smax’
    3 | int sa smax(int a, int b) {
      |        ^~~~

   + 2.c ----> Reason: /home/baolong/Workspace/workspace/PROC/INPUT/2.c:5:1: error: data definition has no type or storage class [-Werror]
    5 | dsfsfafad;
      | ^~~~~~~~~
/home/baolong/Workspace/workspace/PROC/INPUT/2.c:5:1: error: type defaults to ‘int’ in declaration of ‘dsfsfafad’ [-Werror=implicit-int]
cc1: all warnings being treated as errors

   + 8.c ----> Reason: /home/baolong/Workspace/workspace/PROC/INPUT/8.c:5:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
    5 | fsdadasfds
      | ^~~~~~~~~~

   + 12.c ----> Reason: /home/baolong/Workspace/workspace/PROC/INPUT/12.c: In function ‘lcm’:
/home/baolong/Workspace/workspace/PROC/INPUT/12.c:4:22: error: implicit declaration of function ‘gcd’ [-Werror=implicit-function-declaration]
    4 |     return (a * b) / gcd(a, b);
      |                      ^~~
cc1: all warnings being treated as errors

   + 6.c ----> Reason: /home/baolong/Workspace/workspace/PROC/INPUT/6.c:5:1: error: data definition has no type or storage class [-Werror]
    5 | sdlkasjdjawk;dsadas3rw
      | ^~~~~~~~~~~~
/home/baolong/Workspace/workspace/PROC/INPUT/6.c:5:1: error: type defaults to ‘int’ in declaration of ‘sdlkasjdjawk’ [-Werror=implicit-int]
/home/baolong/Workspace/workspace/PROC/INPUT/6.c:5:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
cc1: all warnings being treated as errors

